# text-detector-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  text_detector.c  text_detector_model_config.h.in
cmake/: FindLeptonica.cmake  FindTesseract.cmake  textdetector-config.cmake.in
include/: text_detector.h
src/: CMakeLists.txt  bounding_boxes.c  bounding_boxes.h  detect_memory.c  image_io.c  ocr.c  ocr_internal.h  ocr_memory.c
src/models/: model.c  model_configurable.c  model_dynamic.c  model_dynamic_test.c  text_detector_model.onnx  text_detector_model.pth
tools/: CMakeLists.txt  postprocess_model.py  text-detector-cli.c
